--- a/WinCorePatPranali/src/main.css
+++ b/WinCorePatPranali/src/main.css
@@ -15065,6 +15065,11 @@ a.badge-alternate:hover, a.badge-alternate:focus {
     color: #3f6ad8;
 }
 
+.nav-tabs .nav-link.active > span{
+    border-bottom: solid;
+    border-bottom-color: orangered;
+}
+
 .nav-pills .nav-link:hover {
     color: #3f6ad8 !important;
 }
