Customer and member screens

--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -501,17 +501,11 @@
                                 <li>
                                     <a class="nav-link nav-link-menu" [class.mm-active]="isMenuSelected('customer-search')" (click)="configClick('customer-search')">
                                         <i class="metismenu-icon pe-7s-star"></i>
-                                       Search Customer
+                                       Customers
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="nav-link nav-link-menu" [class.mm-active]="isMenuSelected('customer')" (click)="configClick('customer')">
-                                        <i class="metismenu-icon pe-7s-star"></i>
-                                       New Customer
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
+                                    <a class="nav-link nav-link-menu" [class.mm-active]="isMenuSelected('member-list')" (click)="configClick('member-list')">
                                         <i class="metismenu-icon pe-7s-add-user"></i>
                                         Members
                                     </a>
@@ -526,19 +520,6 @@
                                 <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                             </a>
                             <ul>
-                                <li>
-                                    <a href="#">
-                                        <i class="metismenu-icon pe-7s-star"></i>
-                                       Customers
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="metismenu-icon pe-7s-add-user"></i>
-                                        Members
-                                    </a>
-                                </li>
-                                
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('deposit-accounts')" (click)="configClick('deposit-accounts')">
                                         <i class="metismenu-icon pe-7s-next-2"></i>
