Changes in customer and member screens

--- a/WinCorePatPranali/src/app/screens/accounts/deposit-accounts/deposit-accounts.component.html
+++ b/WinCorePatPranali/src/app/screens/accounts/deposit-accounts/deposit-accounts.component.html
@@ -297,7 +297,7 @@
                                                 <div style="display: flex; margin-top: 25px;">
                                                     <button class="mt-1 btn btn-primary" (click)="saveAccount()"
                                                         tabindex="23">Add</button>
-                                                    <button class="mt-1 btn btn-left-margin10 btn-secondary"
+                                                    <button class="mt-1 btn btn-left-margin10 btn-danger"
                                                         (click)="clear()" tabindex="24">Clear</button>
                                                 </div>
                                             </div>
@@ -358,7 +358,7 @@
                                                 <div style="display: flex; margin-top: 25px;">
                                                     <button class="mt-1 btn btn-primary" (click)="saveAccount()"
                                                         tabindex="23">Add</button>
-                                                    <button class="mt-1 btn btn-left-margin10 btn-secondary"
+                                                    <button class="mt-1 btn btn-left-margin10 btn-danger"
                                                         (click)="clear()" tabindex="24">Clear</button>
                                                 </div>
                                             </div>
@@ -571,7 +571,7 @@
                 <div class="row">
                     <div class="col-md-6 position-relative">
                         <button class="mt-1 btn btn-primary" (click)="saveAccount()" tabindex="23">Submit</button>
-                        <button class="mt-1 btn btn-left-margin10 btn-secondary" (click)="clear()"
+                        <button class="mt-1 btn btn-left-margin10 btn-danger" (click)="clear()"
                             tabindex="24">Clear</button>
                     </div>
                 </div>
