--- a/WinCorePatPranali/src/app/screens/customers/customer/customer-search/customer-search.component.html
+++ b/WinCorePatPranali/src/app/screens/customers/customer/customer-search/customer-search.component.html
@@ -42,7 +42,7 @@
                     <div class="row">
                         <div class="col-md-12 position-relative form-group" style="float: right !important">
                            
-                            <button class="btn btn-left-margin10 btn-secondary" style="float: right;" tabindex="2" (click)="clear()">
+                            <button class="btn btn-left-margin10 btn-danger" style="float: right;" tabindex="2" (click)="clear()">
                                 Clear</button>
                             <button class="btn btn-left-margin10 btn-warning" style="float: right;" tabindex="2" (click)="addNewCustomer()"><i
                                     class="fa fa-plus"></i> Add New Customer </button>
