--- a/WinCorePatPranali/src/app/screens/masters/bank-master/bank-master-form/bank-master-form.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/bank-master/bank-master-form/bank-master-form.component.html
@@ -72,8 +72,8 @@
                     <div class="row">
                         <div class="col-md-6 position-relative">
                             <button type="button" class="mt-1 btn btn-primary" tabindex="7" (click)="saveBank()">Submit</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-secondary" (click)="clear()">Clear</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-alternate" (click)="configClick('banks')">Bank
+                            <button class="mt-1 btn btn-left-margin10 btn-danger" (click)="clear()">Clear</button>
+                            <button class="mt-1 btn btn-left-margin10 btn-secondary" (click)="configClick('banks')">Bank
                                 List</button>
                         </div>
                     </div>
