--- a/WinCorePatPranali/src/app/screens/masters/district-master/district-master-form/district-master-form.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/district-master/district-master-form/district-master-form.component.html
@@ -39,8 +39,8 @@
                     <div class="row">
                         <div class="col-md-6 position-relative">
                             <button class="mt-1 btn btn-primary" (click)="saveDistrict()">Submit</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-secondary" (click)="clear()">Clear</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-alternate"
+                            <button class="mt-1 btn btn-left-margin10 btn-danger" (click)="clear()">Clear</button>
+                            <button class="mt-1 btn btn-left-margin10 btn-secondary"
                                 (click)="configClick('districts')">District List</button>
                         </div>
 
