--- a/WinCorePatPranali/src/app/screens/masters/gl-interest-parameter/gl-interest-parameter.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/gl-interest-parameter/gl-interest-parameter.component.html
@@ -339,7 +339,7 @@
                     <div class="row">
                         <div class="col-md-6 position-relative">
                             <button class="mt-1 btn btn-primary" (click)="saveParameter()" tabindex="23">Submit</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-secondary" (click)="clear()"
+                            <button class="mt-1 btn btn-left-margin10 btn-danger" (click)="clear()"
                                 tabindex="24">Clear</button>
                         </div>
 
