--- a/WinCorePatPranali/src/app/screens/masters/loan-interest-structure/loan-interest-structure.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/loan-interest-structure/loan-interest-structure.component.html
@@ -78,7 +78,7 @@
                 <div class="row">
                     <div class="col-md-6 position-relative">
                         <button class="mt-1 btn btn-primary" (click)="saveStructure()">Submit</button>
-                        <button class="mt-1 btn btn-left-margin10 btn-secondary" (click)="clear()">Clear</button>
+                        <button class="mt-1 btn btn-left-margin10 btn-danger" (click)="clear()">Clear</button>
                     </div>
 
                 </div>
