--- a/WinCorePatPranali/src/app/screens/masters/bank-profile-master/bank-profile-master.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/bank-profile-master/bank-profile-master.component.html
@@ -961,7 +961,7 @@
                 <div class="row">
                     <div class="col-md-6 position-relative">
                         <button class="mt-1 btn btn-primary" (click)="saveProfile()">Submit</button>
-                        <!-- <button class="mt-1 btn btn-left-margin10 btn-secondary" (click)="clear()">Clear</button> -->
+                        <!-- <button class="mt-1 btn btn-left-margin10 btn-danger" (click)="clear()">Clear</button> -->
                     </div>
 
                 </div>
