--- a/WinCorePatPranali/src/app/screens/masters/branch-master/branch-master-form/branch-master-form.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/branch-master/branch-master-form/branch-master-form.component.html
@@ -152,8 +152,8 @@
                     <div class="row">
                         <div class="col-md-6 position-relative">
                             <button class="mt-1 btn btn-primary" tabindex="12" (click)="saveBranch()">Submit</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-secondary" (click)="clear()">Clear</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-alternate"
+                            <button class="mt-1 btn btn-left-margin10 btn-danger" (click)="clear()">Clear</button>
+                            <button class="mt-1 btn btn-left-margin10 btn-secondary"
                                 (click)="configClick('branches')">Branch List</button>
                         </div>
 
