--- a/WinCorePatPranali/src/app/screens/masters/general-ledger-master/general-ledger-master-form/general-ledger-master-form.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/general-ledger-master/general-ledger-master-form/general-ledger-master-form.component.html
@@ -145,8 +145,8 @@
                         <div class="col-md-6 position-relative">
                             <button class="mt-1 btn btn-primary" tabindex="13"
                                 (click)="saveGLMaster()">Submit</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-secondary" (click)="clear()">Clear</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-alternate"
+                            <button class="mt-1 btn btn-left-margin10 btn-danger" (click)="clear()">Clear</button>
+                            <button class="mt-1 btn btn-left-margin10 btn-secondary"
                                 (click)="configClick('general-ledger-list')">Ledgers List</button>
                         </div>
 
