--- a/WinCorePatPranali/src/app/screens/masters/general-master/general-master-form/general-master-form.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/general-master/general-master-form/general-master-form.component.html
@@ -34,8 +34,8 @@
                     <div class="row">
                         <div class="col-md-6 position-relative">
                             <button class="mt-1 btn btn-primary" (click)="saveGeneralMaster()">Submit</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-secondary" (click)="clear()">Clear</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-alternate"
+                            <button class="mt-1 btn btn-left-margin10 btn-danger" (click)="clear()">Clear</button>
+                            <button class="mt-1 btn btn-left-margin10 btn-secondary"
                                 (click)="configClick('master-list')">Master List</button>
                         </div>
 
