--- a/WinCorePatPranali/src/app/screens/masters/tahshil-master/tahshil-master-form/tahshil-master-form.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/tahshil-master/tahshil-master-form/tahshil-master-form.component.html
@@ -50,8 +50,8 @@
                     <div class="row">
                         <div class="col-md-6 position-relative">
                             <button class="mt-1 btn btn-primary" (click)="saveTahsil()">Submit</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-secondary" (click)="clear()">Clear</button>
-                            <button class="mt-1 btn btn-left-margin10 btn-alternate"
+                            <button class="mt-1 btn btn-left-margin10 btn-danger" (click)="clear()">Clear</button>
+                            <button class="mt-1 btn btn-left-margin10 btn-secondary"
                                 (click)="configClick('tahsils')">Tahsil List</button>
                         </div>
 
